--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 ansi_term = "0.12.1"
+base58 = "0.2.0"
 bip32 = "0.5.2"
 bip39 = { version = "2.0.0", features = ["chinese-simplified", "rand_core"] }
 blake2b_simd = "1.0.2"
